--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -201,13 +201,26 @@ body {
             justify-content: flex-end;
 
             &> li {
-                color: rgba( 202, 202, 203, 0.2 );
+                color: rgba( 202, 202, 203, 0.4 );
                 font-family: -apple-system, BlinkMacSystemFont, segoe ui, "Segoe UI", helvetica neue, helvetica, Tahoma, Geneva, Verdana, Ubuntu, roboto, sans-serif;
                 font-size: 0.8em;
                 font-size: clamp( 0.8em, 0.8rem, 12px );
                 font-weight: 600;
                 margin-right: 1vw;
                 margin-right: calc( 1 * var( --vw ) );
+
+                &> a,
+                a:link,
+                a:visited,
+                a:hover,
+                a:active {
+                    color: rgba( 202, 202, 203, 0.4 );
+                    font-family: -apple-system, BlinkMacSystemFont, segoe ui, "Segoe UI", helvetica neue, helvetica, Tahoma, Geneva, Verdana, Ubuntu, roboto, sans-serif;
+                    font-size: 1rem;
+                    text-decoration: none;
+                    font-weight: 700;
+                    text-align: center;
+                }
             }
         }
     }
